# anisoc

./: Dockerfile  README.md  animalai.proto  docker-compose.yml
.github/workflows/: core.yml  front.yml  web.yml
anicore/: Cargo.toml  README.md  build.rs
anicore/src/: aigrpc.rs  game.rs  lib.rs  randai.rs
anicore/tests/: tester.rs
anifront/: .dockerignore  README.md  package-lock.json  package.json
anifront/src/: App.test.tsx  App.tsx  Board.tsx  index.css
anipy/: Dockerfile  animalai_pb2.py  animalai_pb2_grpc.py  anipy.py
aniweb/: .dockerignore  Cargo.toml  README.md
aniweb/src/: aigame.rs  lib.rs  main.rs  telemetry.rs  webmanage.rs
aniweb/tests/: health_check.rs
