[package]
name = "anicore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.56", features = ["derive"] }
rand = "0.8.4"
tracing = "0.1.19"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
tonic = "0.6"
prost = "0.9"

[build-dependencies]
tonic-build = "0.6"